<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp"
    tools:context="vamk.e1700814.payapplication.controller.fragments.ContactsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/headerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/contactsHeaderTextView"
            android:textSize="32sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/contacts_description"
            android:textColor="?colorOnTertiary"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headerTextView" />

        <AutoCompleteTextView
            android:id="@+id/autoCompleteUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_text_background"
            android:drawableStart="@drawable/ic_baseline_person"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/contactsTextViewHint"
            android:inputType="textNoSuggestions"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/silver_shade"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descriptionTextView" />

        <EditText
            android:id="@+id/editTextComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_text_comment_background"
            android:ems="10"
            android:inputType="textMultiLine"
            android:hint="@string/hint_comment_field"
            android:minHeight="128dp"
            android:padding="16dp"
            android:gravity="bottom|start"
            android:textColor="@color/white"
            android:textColorHint="@color/silver_shade"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/autoCompleteUsername" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonGoToConfirmFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/default_button_background"
        android:text="@string/buttonTextNext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="0.90" />
</androidx.constraintlayout.widget.ConstraintLayout>